<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="300dip"
    android:gravity="center_horizontal">
    <ImageView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dip"
	    android:layout_marginBottom="15dip"
    	android:src="@drawable/logo"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        android:gravity="center"/>
    <RelativeLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
	    android:layout_marginTop="15dip"
        android:gravity="center">
	    <TextView
	    	android:id="@+id/usernameLabel"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/usernameLabel"/>
	    <EditText
	    	android:id="@+id/usernameEdit"
	        android:layout_width="200dip"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/usernameLabel"
	        android:layout_alignTop="@id/usernameLabel"
	        android:layout_marginLeft="10dip"
	        android:background="@android:drawable/editbox_background"/>
	    <TextView
	    	android:id="@+id/passwordLabel"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	        android:layout_below="@id/usernameLabel"
	        android:layout_alignRight="@id/usernameLabel"
	        android:layout_marginTop="15dip"
	    	android:text="@string/passwordLabel"/>
	    <EditText
	    	android:id="@+id/passwordEdit"
	        android:layout_width="200dip"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/passwordLabel"
	        android:layout_alignTop="@id/passwordLabel"
	        android:layout_alignLeft="@id/usernameEdit"
	        android:background="@android:drawable/editbox_background"
	        android:inputType="textPassword"/>
	</RelativeLayout>
	<Button
		android:id="@+id/loginButton"
		android:layout_width="150dip"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dip"
		android:text="@string/loginButtonText"/>
</LinearLayout>